--- a/sass/site/blog/blog-layouts/_blog-common.scss
+++ b/sass/site/blog/blog-layouts/_blog-common.scss
@@ -28,7 +28,8 @@
 .entry-content {
 	word-wrap: break-word;
 	p,
-	img {
+	img,
+	iframe {
 		margin-bottom: 1.6em;
 	}
 }
