--- a/sass/site/primary/_gutenberg.scss
+++ b/sass/site/primary/_gutenberg.scss
@@ -14,6 +14,12 @@
 			max-width: unset;
 		}
 
+		.wp-block-embed-youtube.wp-block-embed {
+			:before {
+				content: none;
+			}
+		}
+
 	}
 }
 
@@ -27,5 +33,3 @@
 
 	}
 }
-
-/*  */
